# data-analysis

./: .gitignore  README.md  app.py  pyproject.toml  rfm_segments.csv  segmentation.ipynb
.github/workflows/: ci.yml
.hermes/: repo-memory.md
customer-rfm-segmentation/: README.md  app.py  segmentation.ipynb
house-price-prediction/: README.md  analysis.py  requirements.txt
nlp-sentiment-analysis/: .gitignore  README.md  app.py  create_notebook.py  requirements.txt  sentiment_analysis.ipynb  sentiment_analysis_executed.ipynb
pm25-air-quality-forecasting/: README.md  analysis.py  requirements.txt
projects/nlp-sentiment-analysis/: .gitignore  README.md  requirements.txt
topic-modeling-newsgroups/: README.md  requirements.txt  topic_modeling.py
wine-quality-classification/: README.md  analysis.py  requirements.txt
